--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "archive/V1"]
-	path = archive/V1
+[submodule "Archive/V1"]
+	path = Archive/V1
 	url = https://github.com/PashaBarahimi/Operating-System-Projects
-[submodule "archive/V2"]
-	path = archive/V2
+[submodule "Archive/V2"]
+	path = Archive/V2
 	url = https://github.com/MisaghM/Operating-System-Course-Projects
 [submodule "Archive/V3"]
 	path = Archive/V3
