--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "*.rmd": "markdown",
-        "types.h": "c"
+        "types.h": "c",
+        "*.ipp": "c",
+        "socket": "c"
     }
 }
