--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,18 @@
         "internet": "c",
         "strstream": "cpp",
         "format": "cpp",
-        "stdfloat": "cpp"
+        "stdfloat": "cpp",
+        "__assert": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "__bit_reference": "cpp",
+        "__config": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "execution": "cpp"
     }
 }
